test/corpus/patterns.txt
===
wildcard
===
fn f(_: _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (wildcard))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
empty tuple
===
fn f((): _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_tuple))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
tuple
===
fn f((_, _, _): _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_tuple
        (pattern
         (wildcard))
        (pattern
         (wildcard))
        (pattern
         (wildcard))))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
empty slice
===
fn f([]: _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_slice))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
empty slice
===
fn f([_, _, _]: _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_slice
        (pattern
         (wildcard))
        (pattern
         (wildcard))
        (pattern
         (wildcard))))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
guarded
===
fn f(_ if _: _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_guarded
        (pattern
         (wildcard))
        (expression
         (wildcard))))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
mut name
===
fn f(mut x: _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_name
        (mutability)
        (lower_id)))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
immut name
===
fn f(immut x: _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_name
        (mutability)
        (lower_id)))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
lower path
===
fn f(x: _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_path
        (path
         (path_segment
          (any_id)))))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
upper path
===
fn f(X: _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_path
        (path
         (path_segment
          (any_id)))))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))

===
qualified path
===
fn f(a::B: _) = _
---

(source_file
 (definition
  (function_definition
   (function_signature
    (lower_id)
    (function_parameters
     (function_parameter
      (pattern
       (pattern_path
        (path
         (path_segment
          (any_id))
         (path_segment
          (any_id)))))
      (type
       (wildcard)))))
   (expression
    (wildcard)))))
